# fingrip_ign_moveit2

./: .gitignore  .pre-commit-config.yaml  README.md
fingrip/: CMakeLists.txt  README.md  package.xml
fingrip_description/: CMakeLists.txt  README.md  package.xml
fingrip_description/config/: arm_config.yaml  config_global.yaml  initial_joint_positions.yaml  object_config.yaml
fingrip_description/fingrip/: model.config  model.sdf
fingrip_description/launch/: view.launch.py  view_coppelia.launch.py  view_coppelia_headless.launch.py  view_coppelia_nocollision.launch.py  view_gazebo.launch.py  view_ign.launch.py
fingrip_description/ressources/: object_config.yaml
fingrip_description/rviz/: view.rviz
fingrip_description/scripts/: estimate_inertial_properties.py  xacro2sdf.bash  xacro2urdf.bash
fingrip_description/urdf/: fingrip.gazebo  fingrip.ros2_control  fingrip.urdf  fingrip.urdf.xacro  fingrip_arm.xacro  fingrip_finger.xacro  fingrip_gripper.xacro  fingrip_inertial.xacro  fingrip_palm.xacro  fingrip_transmission.xacro  fingrip_utils.xacro  panda.urdf
fingrip_moveit_config/: CMakeLists.txt  README.md  package.xml
fingrip_moveit_config/config/: controllers_effort.yaml  controllers_position,velocity.yaml  controllers_position.yaml  controllers_velocity.yaml  joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  ompl_planning.yaml  servo.yaml
fingrip_moveit_config/launch/: ex_fake_control.launch.py  ex_gz_control.launch.py  move_group.launch.py
fingrip_moveit_config/rviz/: moveit.rviz
fingrip_moveit_config/scripts/: xacro2srdf.bash
(+58 files in other folders)
