<?xml version="1.0"?>
<package format="3">
  <name>fingrip</name>
  <version>1.0.0</version>
  <description>Metapackage for Fingrip</description>
  <maintainer email="alexis-h-34@hotmail.fr">Alexis Hou</maintainer>
  <author>Andrej Orsula</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>fingrip_description</build_depend>
  <build_depend>fingrip_moveit_config</build_depend>
  <build_depend>xacro</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
