<?xml version="1.0"?>
<package format="3">
  <name>fingrip_description</name>
  <version>3.0.0</version>
  <description>CoppeliaSim Model of RobotiQ attached to an ABB arm </description>
  <maintainer email="orsula.andrej@gmail.com">Alexis Hou</maintainer>
  <author>Alexis Hou</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
